--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.4
   flutter_svg: ^2.0.9
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
