--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   flutter_native_splash: ^2.3.4
   flutter_svg: ^2.0.9
   google_fonts: ^5.1.0
-  firebase_core: ^2.25.5
-  firebase_auth: ^4.17.6
+  badges: ^3.1.1
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
