--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^5.1.0
   badges: ^3.1.1
   shared_preferences: ^2.1.0
+  url_launcher: ^6.0.12
+  flutter_phone_direct_caller: ^2.1.1
 
 dev_dependencies:
   flutter_test:
