--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.1.0
   url_launcher: ^6.0.12
   flutter_phone_direct_caller: ^2.1.1
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
+  flutter_map_marker_popup: ^6.1.2
 
 dev_dependencies:
   flutter_test:
